--- a/src/App.css
+++ b/src/App.css
@@ -1,59 +1,19 @@
 @font-face {
   font-family: Billabong;
-  src: url(../public/Billabong.ttf);
+  src: url('../public/Billabong.ttf');
 }
 
-.App {
-  text-align: center;
+
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
-.splash-header {
-  font-family: Billabong;
-  color: white;
-  font-size: 3em;
-  text-shadow: -1px -1px 0 #000, 
-  1px -1px 0 #000, 
-  -1px 1px 0 #000, 
-  1px 1px 0 #000;
-}
-
-.splash-detail {
-  font-family: Billabong;
-  font-size: 1em;
-  color: black;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-/* @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-} */
-
-.App-header {
-  background-color: lightblue;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
 }
