--- a/src/components/Navbar/index.css
+++ b/src/components/Navbar/index.css
@@ -9,10 +9,38 @@
     border-bottom: 1px solid black;
 }
 
+.nav-content-container {
+    width: 50%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+
+}
+
+.nav-logo-container {
+    display:flex;
+    flex-direction: row;
+    align-items: center;
+} 
+
+.nav-logo {
+    height: 40px;
+    margin-right: 15px;
+}
+
+.nav-title {
+    color:black;
+    font-family: Billabong;
+    font-size: 2em;
+    margin-top: 30px;
+    
+}
+
 .nav-icon {
     color: black;
     height: 30px;
-    width: 30px
+    width: 30px;
+    margin: auto 10px auto 10px;
 }
 
 .nav-search {
