--- a/src/components/Navbar/index.css
+++ b/src/components/Navbar/index.css
@@ -7,6 +7,7 @@
     justify-content: space-evenly;
     align-items: center;
     border-bottom: 1px solid black;
+    box-shadow: 0px 3px 2px lightgray ;
 }
 
 .nav-content-container {
