Posts and feed is about where I want it

--- a/src/components/Feed/index.css
+++ b/src/components/Feed/index.css
@@ -1,5 +1,7 @@
 .feed-container {
+    height: 95vh;
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: 55px;
 }
