--- a/src/App.css
+++ b/src/App.css
@@ -3,9 +3,9 @@
   src: url('../public/Billabong.ttf');
 }
 
-
 body {
   margin: 0;
+  height: 94vh;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
