--- a/src/components/Feed/index.css
+++ b/src/components/Feed/index.css
@@ -1,7 +1,9 @@
 .feed-container {
-    height: 95vh;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     margin-top: 55px;
+    margin-bottom: 35px;
+    padding-bottom: 15px;
 }
