--- a/src/components/Feed/index.css
+++ b/src/components/Feed/index.css
@@ -1,9 +1,9 @@
 .feed-container {
-    height: 100vh;
+    height: 95vh;
+    box-sizing: border-box;
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 55px;
-    margin-bottom: 35px;
-    padding-bottom: 15px;
+    margin-top: 65px;
+    margin-bottom: 55px;
 }
