--- a/src/components/Navbar/index.css
+++ b/src/components/Navbar/index.css
@@ -2,7 +2,7 @@
     position: fixed;
     top: 0;
     width: 100%;
-    height: 50px;
+    height: 5vh;
     background-color: whitesmoke;
     color: black;
     display: flex;
